loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:3: error: Int does not take parameters
  avance()
        ^Poucet1:5: error: Int does not take parameters
      avance()
            ^